# Thanissaro_Knowledge_Graph

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml
data/03_kg_components/: raw_concepts.jsonl  raw_concepts_discovery_deepseek_chat.jsonl  raw_concepts_discovery_gemini_25_flash.jsonl  raw_concepts_fixed.jsonl  raw_concepts_fixed_deepseek_chat.jsonl
logs/: concept_extraction_skipped.jsonl  concept_extraction_skipped_discovery_deepseek_chat.jsonl  concept_extraction_skipped_discovery_gemini_25_flash.jsonl  concept_extraction_skipped_fixed.jsonl
scripts/: 01_run_scraping.py  02_run_concept_extraction.py  03_run_concept_normalizer.py
src/data_acquisition/: scraper.py
src/processing/: base_normalizer.py  base_processor.py  concept_extractor.py  concept_normalizer.py
src/utils/: config_helpers.py  data_helpers.py  llm_helpers.py  schemas.py
tests/: test_concept_extractor.py  test_config_helpers.py  test_data_helpers.py  test_llm_helpers.py  test_scraper.py
