[project]
name = "thanissaro-knowledge-graph"
version = "0.1.0"
description = "A project to build (by data-driven discovery) a knowledge graph of the Buddhist Pali Canon."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars",
    "beautifulsoup4",
    "jupyter",
    "ipython",
    "ipykernel",
    "google-genai",
    "tqdm",
    "jsonlines",
    "python-dotenv",
    "pyyaml",
    "requests",
    "pydantic",
    "openai",
    "sentence-transformers"

]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov", # For checking test coverage
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"] # Tell pytest where to find tests
addopts = [
    "-ra",                        # Report extra test summary info
    "--strict-markers",           # Be strict about markers
    "--cov=src",                  # Measure coverage for the src directory
    "--cov-report=term-missing",  # Show which lines are not covered
]

[tool.coverage.run]
source = ["src"] # Explicitly define the source for coverage
omit = [
    "src/__init__.py",
    "src/data_acquisition/__init__.py",
    "src/graph_creation/__init__.py",
    "src/processing/__init__.py",
    "src/utils/__init__.py",
    "src/main.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80 # Optional: Enforce a minimum coverage percentage